--- a/package.json
+++ b/package.json
@@ -37,20 +37,17 @@
       "last 1 safari version"
     ]
   },
-  "optionalDependencies": {
-    "fsevents": "^2.3.2"
-  },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.22.0",
+    "babel-eslint": "10.1.x",
+    "eslint": "7.11.x",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "2.22.x",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "stylelint": "^13.12.0",
-    "stylelint-config-standard": "^21.0.0",
+    "stylelint": "13.3.x",
+    "stylelint-config-standard": "20.0.x",
     "stylelint-csstree-validator": "^1.9.0",
-    "stylelint-scss": "^3.19.0"
+    "stylelint-scss": "3.17.x"
   }
 }
