--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "history": "^4.10.1",
     "jest-cli": "^26.6.3",
     "react-test-renderer": "^17.0.1",
     "redux-mock-store": "^1.5.4",
