--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "history": "^4.10.1",
     "jest-cli": "^26.6.3",
+    "prettier": "^2.2.1",
     "react-test-renderer": "^17.0.1",
     "redux-mock-store": "^1.5.4",
     "sinon": "^9.2.4",
